--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -14,8 +14,9 @@
 .kh-brand--stacked .kh-brand__logo img{
   width: 150px;               /* BIGGER photo */
   height: 150px;
-  border-radius: 1200px;
+  border-radius: 999px;
   object-fit: cover;
+  object-position: center 20%;
   display: block;
 }
 
